--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -6,6 +6,23 @@ concurrency:
 env:
   NEXT_PUBLIC_EXPLORER_API_URL: http://localhost:4350/graphql
 jobs:
+  check-pr:
+    runs-on: ubuntu-latest
+    outputs:
+      pr-number: ${{ steps.check-prs.outputs.PR_NUMBER }}
+    steps:
+      - name: Check PRs
+        id: check-prs
+        run: |
+          # ...
+          echo "PR_NUMBER=$pr_number" >> $GITHUB_OUTPUT
+
+  publish:
+    needs: [ check-pr ]
+    runs-on: ubuntu-latest
+    env:
+      PR_NUMBER: ${{ needs.check-pr.outputs.pr-number }}
+
   get-sepolia-deployment-url:
     runs-on: ubuntu-latest
     outputs:
@@ -23,8 +40,8 @@ jobs:
       - name: Get Sepolia deployment url
         id: check-prs
         run: |
-          ROLLUPS_EXPLORER_SEPOLIA_URL=$(node getSepoliaDeploymentUrl.mjs ${{ secrets.VERCEL_TOKEN }})
-          echo "Rollups Explorer Sepolia Urll: " $ROLLUPS_EXPLORER_SEPOLIA_URL
+          pr_number=$(node getSepoliaDeploymentUrl.mjs ${{ secrets.VERCEL_TOKEN }})
+          echo "Rollups Explorer Sepolia Urll: " $pr_number
           echo "PR_NUMBER=$pr_number" >> $GITHUB_OUTPUT
 
   wait-for-vercel-deployment:
