--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -64,6 +64,7 @@
         "@types/react": "19.1.8",
         "@types/react-dom": "19.1.6",
         "@types/uuid": "^10.0.0",
+        "@vercel/sdk": "^1.10.6",
         "@vitejs/plugin-react": "^4.3.1",
         "@vitest/coverage-v8": "^3.2.4",
         "@vitest/ui": "^3.2.4",
