--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -20,11 +20,17 @@ jobs:
           node-version: 22.12.0
           cache: "yarn"
 
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
       - name: Get Sepolia deployment url
         id: get-deployment-url
         run: |
-          deployment_url=$(node getSepoliaDeploymentUrl.mjs ${{ secrets.VERCEL_TOKEN }} ${{ github.sha }})
+          deployment_url=$(node getSepoliaDeploymentUrl.mjs)
           echo "DEPLOYMENT_URL=$deployment_url" >> $GITHUB_OUTPUT
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          GITHUB_SHA: ${{ github.sha }}
 
   wait-for-sepolia-deployment:
     needs: [get-sepolia-deployment-url]
