--- a/turbo.json
+++ b/turbo.json
@@ -14,7 +14,9 @@
         "NEXT_PUBLIC_NODE_RPC_URL",
         "CI",
         "E2E_BASE_URL",
-        "VERCEL_AUTOMATION_BYPASS_SECRET"
+        "VERCEL_AUTOMATION_BYPASS_SECRET",
+        "VERCEL_TOKEN",
+        "GITHUB_SHA"
     ],
     "pipeline": {
         "build": {
