--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -39,13 +39,13 @@
         "highlightjs-solidity": "^2.0.6",
         "jotai": "^2.12.5",
         "lokijs": "^1",
-        "next": "15.3.5",
+        "next": "^15.5.3",
         "pino-pretty": "^10",
         "pretty-ms": "^8",
         "ramda": "^0.31.3",
         "ramda-adjunct": "^5.1.0",
-        "react": "19.1.0",
-        "react-dom": "19.1.0",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1",
         "react-icons": "^5.5.0",
         "react-jazzicon": "^1",
         "urql": "^4",
@@ -61,8 +61,8 @@
         "@testing-library/react": "^16.3.0",
         "@types/node": "^20",
         "@types/ramda": "^0.30.2",
-        "@types/react": "19.1.8",
-        "@types/react-dom": "19.1.6",
+        "@types/react": "^19.1.13",
+        "@types/react-dom": "^19.1.9",
         "@types/uuid": "^10.0.0",
         "@vercel/sdk": "^1.10.6",
         "@vitejs/plugin-react": "^4.3.1",
