--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -49,6 +49,7 @@
         "@cartesi/tsconfig": "*",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
+        "@testing-library/dom": "^10.4.1",
         "@types/ramda": "^0.30.2",
         "@types/react": "^19.1.13",
         "@types/react-dom": "^19.1.9",
