--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -16,38 +16,31 @@
         "@mantine/hooks": "^7.15.3",
         "@rainbow-me/rainbowkit": "2",
         "@tanstack/react-query": "^5.27.5",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1",
         "react-icons": "^4",
         "serve": "^14.2.1",
         "wagmi": "^2"
     },
     "devDependencies": {
         "@cartesi/tsconfig": "*",
-        "@storybook/addon-essentials": "^8.4.7",
-        "@storybook/addon-interactions": "^8.4.7",
-        "@storybook/addon-links": "^8.4.7",
-        "@storybook/addon-mdx-gfm": "^8.4.7",
-        "@storybook/addon-onboarding": "^8.4.7",
-        "@storybook/addon-themes": "^8.4.7",
-        "@storybook/addon-viewport": "^8.4.7",
-        "@storybook/blocks": "^8.4.7",
-        "@storybook/cli": "^8.4.7",
-        "@storybook/preview-api": "^8.4.7",
-        "@storybook/react": "^8.4.7",
-        "@storybook/react-vite": "^8.4.7",
-        "@types/react": "^19.0.2",
-        "@types/react-dom": "^19.0.2",
+        "@storybook/addon-docs": "^9.1.7",
+        "@storybook/addon-links": "^9.1.7",
+        "@storybook/addon-onboarding": "^9.1.7",
+        "@storybook/addon-themes": "^9.1.7",
+        "@storybook/cli": "^9.1.7",
+        "@storybook/react": "^9.1.7",
+        "@storybook/react-vite": "^9.1.7",
+        "@types/react": "^19.1.13",
+        "@types/react-dom": "^19.1.9",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
-        "@vitejs/plugin-react": "^4.3.4",
+        "@vitejs/plugin-react": "^5.0.3",
         "eslint": "^8.45.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.3",
-        "prop-types": "^15.8.1",
-        "storybook": "^8.4.7",
-        "storybook-dark-mode": "^4.0.2",
+        "storybook": "^9.1.7",
         "typescript": "^5.0.2",
-        "vite": "^4.5.14"
+        "vite": "^7.1.6"
     }
 }
