--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -49,15 +49,16 @@
         "@cartesi/tsconfig": "*",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
+        "@testing-library/dom": "^10.4.1",
         "@types/ramda": "^0.30.2",
-        "@types/react": "^19.1.8",
-        "@types/react-dom": "^19.1.6",
+        "@types/react": "^19.1.13",
+        "@types/react-dom": "^19.1.9",
         "@vitest/coverage-v8": "^3.2.4",
         "@vitest/ui": "^3.2.4",
         "eslint": "^8",
         "eslint-config-cartesi": "*",
         "jsdom": "^26.1.0",
-        "react": "^19.1.0",
+        "react": "^19.1.1",
         "tsup": "^8.5.0",
         "typescript": "^5",
         "vitest": "^3.2.4"
