--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,9 +17,9 @@
         "test:e2e:ui": "playwright test --ui"
     },
     "dependencies": {
-        "@cartesi/rollups-explorer-domain": "*",
-        "@cartesi/rollups-explorer-ui": "*",
-        "@cartesi/rollups-wagmi": "*",
+        "@cartesi/rollups-explorer-domain": "workspace:*",
+        "@cartesi/rollups-explorer-ui": "workspace:*",
+        "@cartesi/rollups-wagmi": "workspace:*",
         "@mantine/code-highlight": "^7.15.3",
         "@mantine/core": "^7.15.3",
         "@mantine/form": "^7.15.3",
@@ -54,7 +54,7 @@
         "wagmi": "^2"
     },
     "devDependencies": {
-        "@cartesi/tsconfig": "*",
+        "@cartesi/tsconfig": "workspace:*",
         "@playwright/test": "^1.51.0",
         "@tenkeylabs/dappwright": "^2.11.2",
         "@testing-library/jest-dom": "^6.6.3",
@@ -69,7 +69,7 @@
         "@vitest/coverage-v8": "^3.2.4",
         "@vitest/ui": "^3.2.4",
         "eslint": "^8",
-        "eslint-config-cartesi": "*",
+        "eslint-config-cartesi": "workspace:*",
         "happy-dom": "^18.0.1",
         "jsdom": "^26.1.0",
         "npm-run-all": "^4",
