--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -26,8 +26,8 @@
         "test:ci": "vitest run --coverage"
     },
     "dependencies": {
-        "@cartesi/rollups-explorer-domain": "*",
-        "@cartesi/rollups-wagmi": "*",
+        "@cartesi/rollups-explorer-domain": "workspace:*",
+        "@cartesi/rollups-wagmi": "workspace:*",
         "@mantine/core": "^7.15.3",
         "@mantine/form": "^7.15.3",
         "@mantine/hooks": "^7.15.3",
@@ -46,7 +46,7 @@
         "@mantine/hooks": "^7.15.3"
     },
     "devDependencies": {
-        "@cartesi/tsconfig": "*",
+        "@cartesi/tsconfig": "workspace:*",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
         "@testing-library/dom": "^10.4.1",
@@ -56,7 +56,7 @@
         "@vitest/coverage-v8": "^3.2.4",
         "@vitest/ui": "^3.2.4",
         "eslint": "^8",
-        "eslint-config-cartesi": "*",
+        "eslint-config-cartesi": "workspace:*",
         "jsdom": "^26.1.0",
         "react": "^19.1.1",
         "tsup": "^8.5.0",
