--- a/packages/eslint-config-cartesi/package.json
+++ b/packages/eslint-config-cartesi/package.json
@@ -1,14 +1,25 @@
 {
     "name": "eslint-config-cartesi",
     "version": "0.0.0",
-    "main": "index.js",
     "license": "Apache-2.0",
+    "type": "module",
     "private": true,
-    "dependencies": {
-        "eslint-config-next": "latest",
-        "eslint-config-prettier": "^9",
-        "eslint-plugin-react": "^7",
-        "eslint-config-turbo": "latest",
-        "typescript": "^5"
+    "exports": {
+        "./base": "./base.js",
+        "./next-js": "./next.js",
+        "./react-internal": "./react-internal.js"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.34.0",
+        "@next/eslint-plugin-next": "^15.5.0",
+        "eslint": "^9.34.0",
+        "eslint-config-prettier": "^10.1.1",
+        "eslint-plugin-only-warn": "^1.1.0",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-turbo": "^2.5.0",
+        "globals": "^16.3.0",
+        "typescript": "^5.9.2",
+        "typescript-eslint": "^8.40.0"
     }
 }
