--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,6 +31,7 @@
         "@tanstack/react-query": "^5.27.5",
         "@vercel/analytics": "^1.5.0",
         "@vercel/speed-insights": "^1.2.0",
+        "abitype": "1.0.8",
         "dexie": "^4.0.11",
         "encoding": "^0.1",
         "graphql": "^16",
@@ -59,6 +60,7 @@
         "@tenkeylabs/dappwright": "^2.11.2",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
         "@types/node": "^20",
         "@types/ramda": "^0.30.2",
         "@types/react": "^19.1.13",
@@ -80,9 +82,5 @@
         "ts-node": "^10",
         "typescript": "^5",
         "vitest": "^3.2.4"
-    },
-    "resolutions": {
-        "@types/react": "19.1.8",
-        "@types/react-dom": "19.1.6"
     }
 }
