refactor: Upgrade linter and configuration.

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,6 +19,7 @@
         "build": "tsup",
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
         "dev": "tsup --watch",
+        "lint": "eslint",
         "test": "vitest run",
         "test:watch": "vitest",
         "test:ui": "vitest --ui",
@@ -54,7 +55,7 @@
         "@types/react-dom": "^19.1.9",
         "@vitest/coverage-v8": "^3.2.4",
         "@vitest/ui": "^3.2.4",
-        "eslint": "^8",
+        "eslint": "9.34.0",
         "eslint-config-cartesi": "workspace:*",
         "jsdom": "^26.1.0",
         "react": "^19.1.1",
