--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,7 @@
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .next",
         "dev": "next dev --turbopack",
         "start": "next start",
-        "lint": "next lint",
+        "lint": "eslint",
         "test": "vitest run",
         "test:watch": "vitest",
         "test:ui": "vitest --ui",
