--- a/packages/rollups-wagmi/package.json
+++ b/packages/rollups-wagmi/package.json
@@ -20,8 +20,12 @@
         "build": "tsup",
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
         "codegen": "wagmi generate",
+        "lint": "eslint",
         "cannon:inspect": "cannon inspect cartesi-rollups:2.0.0 --write-deployments ./deployments",
         "dev": "tsup --watch"
+    },
+    "dependencies": {
+        "wagmi": "^2"
     },
     "peerDependencies": {
         "wagmi": "^2"
@@ -36,14 +40,13 @@
         "@types/react-dom": "^19.1.6",
         "@usecannon/cli": "^2.24.2",
         "@wagmi/cli": "^2",
-        "eslint": "^8",
+        "eslint": "9.34.0",
         "eslint-config-cartesi": "workspace:*",
         "react": "^19.1.0",
         "tsup": "^8.5.0",
         "tsx": "^4.20.3",
         "typescript": "^5",
-        "viem": "^2",
-        "wagmi": "^2"
+        "viem": "^2"
     },
     "publishConfig": {
         "access": "public"
