refactor: Remove dependency hoisting.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,14 +1,13 @@
 packages:
-  - apps/*
-  - packages/*
+    - apps/*
+    - packages/*
 
-shamefullyHoist: true
 onlyBuiltDependencies:
-  - '@vercel/speed-insights'
-  - bufferutil
-  - esbuild
-  - keccak
-  - protobufjs
-  - secp256k1
-  - sharp
-  - utf-8-validate
+    - "@vercel/speed-insights"
+    - bufferutil
+    - esbuild
+    - keccak
+    - protobufjs
+    - secp256k1
+    - sharp
+    - utf-8-validate
