--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "lcov-result-merger": "4.1.0",
         "prettier": "3.5.3",
         "@vercel/sdk": "^1.10.6",
-        "turbo": "^1.10.13"
+        "turbo": "^1.10.13",
+        "typescript": "catalog:"
     },
     "engines": {
         "node": ">=22.x"
