--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -51,8 +51,8 @@
         "react-jazzicon": "^1",
         "urql": "^4",
         "uuid": "^11.1.0",
-        "viem": "^2.38.4",
-        "wagmi": "^2.18.2"
+        "viem": "catalog:",
+        "wagmi": "catalog:"
     },
     "devDependencies": {
         "@cartesi/tsconfig": "workspace:*",
@@ -69,7 +69,7 @@
         "@vitejs/plugin-react": "^4.3.1",
         "@vitest/coverage-v8": "^3.2.4",
         "@vitest/ui": "^3.2.4",
-        "eslint": "^9.34.0",
+        "eslint": "catalog:",
         "eslint-config-cartesi": "workspace:*",
         "happy-dom": "^18.0.1",
         "jsdom": "^26.1.0",
@@ -79,7 +79,7 @@
         "postcss-preset-mantine": "^1.17.0",
         "postcss-simple-vars": "^7",
         "ts-node": "^10",
-        "typescript": "^5",
+        "typescript": "catalog:",
         "vitest": "^3.2.4"
     }
 }
