--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -37,8 +37,8 @@
         "ramda-adjunct": "^5.1.0",
         "react-icons": "^5.5.0",
         "uuid": "^11.1.0",
-        "viem": "^2.38.4",
-        "wagmi": "^2.18.2"
+        "viem": "catalog:",
+        "wagmi": "catalog:"
     },
     "peerDependencies": {
         "@mantine/core": "^7.15.3",
@@ -55,12 +55,12 @@
         "@types/react-dom": "^19.1.9",
         "@vitest/coverage-v8": "^3.2.4",
         "@vitest/ui": "^3.2.4",
-        "eslint": "9.34.0",
+        "eslint": "catalog:",
         "eslint-config-cartesi": "workspace:*",
         "jsdom": "^26.1.0",
         "react": "^19.1.1",
         "tsup": "^8.5.0",
-        "typescript": "^5",
+        "typescript": "catalog:",
         "vitest": "^3.2.4"
     },
     "publishConfig": {
