--- a/packages/rollups-wagmi/package.json
+++ b/packages/rollups-wagmi/package.json
@@ -6,7 +6,7 @@
     "types": "./dist/index.d.ts",
     "type": "module",
     "files": [
-        "dist"
+        "dist/**"
     ],
     "exports": {
         ".": {
@@ -20,32 +20,33 @@
         "build": "tsup",
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
         "codegen": "wagmi generate",
+        "lint": "eslint",
         "cannon:inspect": "cannon inspect cartesi-rollups:2.0.0 --write-deployments ./deployments",
         "dev": "tsup --watch"
     },
     "dependencies": {
-        "wagmi": "^2"
+        "wagmi": "catalog:"
     },
     "peerDependencies": {
-        "wagmi": "^2"
+        "wagmi": "catalog:"
     },
     "devDependencies": {
         "@cartesi/rollups": "^1.2.0",
         "@cartesi/rollups-v2": "npm:@cartesi/rollups@2.0.0",
-        "@cartesi/tsconfig": "*",
+        "@cartesi/tsconfig": "workspace:*",
         "@sunodo/wagmi-plugin-hardhat-deploy": "^0.4.0",
         "@types/node": "^20",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "@usecannon/cli": "^2.24.2",
         "@wagmi/cli": "^2",
-        "eslint": "^8",
-        "eslint-config-cartesi": "*",
+        "eslint": "catalog:",
+        "eslint-config-cartesi": "workspace:*",
         "react": "^19.1.0",
         "tsup": "^8.5.0",
         "tsx": "^4.20.3",
-        "typescript": "^5",
-        "viem": "^2"
+        "typescript": "catalog:",
+        "viem": "catalog:"
     },
     "publishConfig": {
         "access": "public"
