--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -7,11 +7,12 @@
         "dev": "storybook dev -p 6006",
         "build": "storybook build",
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf storybook-static",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "lint": "eslint",
         "preview": "serve storybook-static"
     },
     "dependencies": {
-        "@cartesi/rollups-explorer-ui": "*",
+        "@cartesi/rollups-explorer-domain": "workspace:*",
+        "@cartesi/rollups-explorer-ui": "workspace:*",
         "@mantine/core": "^7.15.3",
         "@mantine/hooks": "^7.15.3",
         "@rainbow-me/rainbowkit": "2",
@@ -20,10 +21,11 @@
         "react-dom": "^19.1.1",
         "react-icons": "^4",
         "serve": "^14.2.1",
-        "wagmi": "^2"
+        "viem": "catalog:",
+        "wagmi": "catalog:"
     },
     "devDependencies": {
-        "@cartesi/tsconfig": "*",
+        "@cartesi/tsconfig": "workspace:*",
         "@storybook/addon-docs": "^9.1.7",
         "@storybook/addon-links": "^9.1.7",
         "@storybook/addon-onboarding": "^9.1.7",
@@ -33,14 +35,11 @@
         "@storybook/react-vite": "^9.1.7",
         "@types/react": "^19.1.13",
         "@types/react-dom": "^19.1.9",
-        "@typescript-eslint/eslint-plugin": "^6.0.0",
-        "@typescript-eslint/parser": "^6.0.0",
         "@vitejs/plugin-react": "^5.0.3",
-        "eslint": "^8.45.0",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.3",
+        "eslint": "catalog:",
+        "eslint-config-cartesi": "workspace:*",
         "storybook": "^9.1.7",
-        "typescript": "^5.0.2",
+        "typescript": "catalog:",
         "vite": "^7.1.6"
     }
 }
