--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,15 +19,15 @@
         "build": "tsup",
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
         "dev": "tsup --watch",
-        "lint": "eslint \"src/**/*.ts*\"",
+        "lint": "eslint",
         "test": "vitest run",
         "test:watch": "vitest",
         "test:ui": "vitest --ui",
         "test:ci": "vitest run --coverage"
     },
     "dependencies": {
-        "@cartesi/rollups-explorer-domain": "*",
-        "@cartesi/rollups-wagmi": "*",
+        "@cartesi/rollups-explorer-domain": "workspace:*",
+        "@cartesi/rollups-wagmi": "workspace:*",
         "@mantine/core": "^7.15.3",
         "@mantine/form": "^7.15.3",
         "@mantine/hooks": "^7.15.3",
@@ -37,8 +37,8 @@
         "ramda-adjunct": "^5.1.0",
         "react-icons": "^5.5.0",
         "uuid": "^11.1.0",
-        "viem": "^2",
-        "wagmi": "^2"
+        "viem": "catalog:",
+        "wagmi": "catalog:"
     },
     "peerDependencies": {
         "@mantine/core": "^7.15.3",
@@ -46,21 +46,21 @@
         "@mantine/hooks": "^7.15.3"
     },
     "devDependencies": {
-        "@cartesi/tsconfig": "*",
+        "@cartesi/tsconfig": "workspace:*",
+        "@testing-library/dom": "^10.4.1",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
-        "@testing-library/dom": "^10.4.1",
         "@types/ramda": "^0.30.2",
         "@types/react": "^19.1.13",
         "@types/react-dom": "^19.1.9",
         "@vitest/coverage-v8": "^3.2.4",
         "@vitest/ui": "^3.2.4",
-        "eslint": "^8",
-        "eslint-config-cartesi": "*",
+        "eslint": "catalog:",
+        "eslint-config-cartesi": "workspace:*",
         "jsdom": "^26.1.0",
         "react": "^19.1.1",
         "tsup": "^8.5.0",
-        "typescript": "^5",
+        "typescript": "catalog:",
         "vitest": "^3.2.4"
     },
     "publishConfig": {
