--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "private": true,
     "scripts": {
         "build": "turbo run build",
+        "build:storybook": "turbo run build-storybook",
+        "storybook": "turbo run storybook",
         "dev": "turbo run dev --no-cache --continue",
         "lint": "turbo run lint",
         "clean": "turbo run clean && rm -rf node_modules",
