--- a/apps/dave/package.json
+++ b/apps/dave/package.json
@@ -4,6 +4,7 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
+        "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
