--- a/apps/dave/package.json
+++ b/apps/dave/package.json
@@ -19,7 +19,7 @@
         "@mantine/hooks": "^8.3.2",
         "@raugfer/jazzicon": "^1.0.6",
         "@tabler/icons-react": "^3.35.0",
-        "@tanstack/react-query": "^5.90.2",
+        "@tanstack/react-query": "catalog:",
         "@vercel/analytics": "^1.5.0",
         "date-fns": "^4.1.0",
         "humanize-duration": "^3.33.1",
