--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,7 +28,7 @@
         "@rainbow-me/rainbowkit": "2.2.7",
         "@react-spring/web": "^10.0.1",
         "@shazow/whatsabi": "^0.14.1",
-        "@tanstack/react-query": "^5.27.5",
+        "@tanstack/react-query": "catalog:",
         "@vercel/analytics": "^1.5.0",
         "@vercel/speed-insights": "^1.2.0",
         "abitype": "1.0.8",
