--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -16,7 +16,7 @@
         "@mantine/core": "^7.15.3",
         "@mantine/hooks": "^7.15.3",
         "@rainbow-me/rainbowkit": "2",
-        "@tanstack/react-query": "^5.27.5",
+        "@tanstack/react-query": "catalog:",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "react-icons": "^4",
