--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,7 +32,7 @@
         "@mantine/form": "^7.15.3",
         "@mantine/hooks": "^7.15.3",
         "@react-spring/web": "^10.0.1",
-        "@tanstack/react-query": "^5.27.5",
+        "@tanstack/react-query": "catalog:",
         "ramda": "^0.31.3",
         "ramda-adjunct": "^5.1.0",
         "react-icons": "^5.5.0",
