--- a/apps/dave/package.json
+++ b/apps/dave/package.json
@@ -15,6 +15,8 @@
         "format": "prettier --write \"**/*.{ts,tsx,md}\""
     },
     "dependencies": {
+        "@cartesi/viem": "2.0.0-alpha.22",
+        "@cartesi/wagmi": "2.0.0-alpha.23",
         "@mantine/core": "^8.3.2",
         "@mantine/hooks": "^8.3.2",
         "@raugfer/jazzicon": "^1.0.6",
