--- a/turbo.json
+++ b/turbo.json
@@ -18,7 +18,7 @@
         "VERCEL_TOKEN",
         "GITHUB_SHA"
     ],
-    "pipeline": {
+    "tasks": {
         "build": {
             "dependsOn": ["^build", "codegen"],
             "outputs": [
