--- a/apps/dave/package.json
+++ b/apps/dave/package.json
@@ -5,58 +5,55 @@
     "type": "module",
     "scripts": {
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
-        "dev": "vite",
-        "build": "tsc -b && vite build",
+        "dev": "next dev",
+        "build": "next build",
         "lint": "eslint .",
-        "preview": "vite preview",
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
         "format:check": "prettier \"**/*.{ts,tsx}\" --check",
         "format": "prettier --write \"**/*.{ts,tsx,md}\""
     },
     "dependencies": {
-        "@cartesi/viem": "2.0.0-alpha.22",
-        "@cartesi/wagmi": "2.0.0-alpha.23",
-        "@mantine/core": "^8.3.2",
-        "@mantine/hooks": "^8.3.2",
+        "@cartesi/viem": "2.0.0-alpha.24",
+        "@cartesi/wagmi": "2.0.0-alpha.27",
+        "@mantine/core": "^8.3.10",
+        "@mantine/hooks": "^8.3.10",
         "@raugfer/jazzicon": "^1.0.6",
         "@tabler/icons-react": "^3.35.0",
         "@tanstack/react-query": "catalog:",
-        "@vercel/analytics": "^1.5.0",
+        "@vercel/analytics": "^1.6.1",
         "date-fns": "^4.1.0",
-        "humanize-duration": "^3.33.1",
-        "ramda": "^0.31.3",
+        "humanize-duration": "^3.33.2",
+        "ramda": "^0.32.0",
         "react": "catalog:",
         "react-dom": "catalog:",
+        "next": "^16.0.10",
         "react-icons": "^5.5.0",
-        "react-router": "^7.9.2",
         "viem": "catalog:"
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^4.1.3",
         "@parcel/watcher": "^2.5.1",
-        "@storybook/addon-a11y": "^10.1.3",
-        "@storybook/addon-docs": "^10.1.3",
-        "@storybook/addon-onboarding": "^10.1.3",
-        "@storybook/react-vite": "^10.1.3",
+        "@storybook/addon-a11y": "^10.1.5",
+        "@storybook/addon-docs": "^10.1.5",
+        "@storybook/addon-onboarding": "^10.1.5",
+        "@storybook/nextjs": "^10.1.5",
         "@types/humanize-duration": "^3.27.4",
-        "@types/node": "^22.18.6",
+        "@types/node": "^24.10.2",
         "@types/ramda": "^0.31.1",
-        "@types/react": "^19.1.13",
-        "@types/react-dom": "^19.1.9",
-        "@vitejs/plugin-react": "^5.0.3",
+        "@types/react": "^19.2.7",
+        "@types/react-dom": "^19.2.3",
         "eslint": "catalog:",
         "eslint-config-cartesi": "workspace:*",
         "eslint-plugin-react-refresh": "^0.4.21",
-        "eslint-plugin-storybook": "^10.1.3",
-        "globals": "^16.4.0",
+        "eslint-plugin-storybook": "^10.1.5",
+        "globals": "^16.5.0",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.5.6",
         "postcss-preset-mantine": "^1.18.0",
         "postcss-simple-vars": "^7.0.1",
-        "prettier": "^3.6.2",
-        "storybook": "^10.1.3",
-        "typescript": "catalog:",
-        "vite": "^7.1.7"
+        "prettier": "catalog:",
+        "storybook": "^10.1.5",
+        "typescript": "catalog:"
     }
 }
