--- a/apps/dave/vercel.json
+++ b/apps/dave/vercel.json
@@ -1,5 +1,6 @@
 {
     "$schema": "https://openapi.vercel.sh/vercel.json",
+    "framework": "nextjs",
     "rewrites": [
         {
             "source": "/(.*)",
