--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -55,8 +55,8 @@
     },
     "devDependencies": {
         "@cartesi/tsconfig": "workspace:*",
-        "@playwright/test": "^1.51.0",
-        "@tenkeylabs/dappwright": "^2.11.4",
+        "@playwright/test": "1.57.0",
+        "@tenkeylabs/dappwright": "^2.12.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.6.1",
@@ -73,7 +73,7 @@
         "happy-dom": "^18.0.1",
         "jsdom": "^26.1.0",
         "npm-run-all": "^4",
-        "playwright-core": "^1.54.1",
+        "playwright-core": "1.57.0",
         "postcss": "^8",
         "postcss-preset-mantine": "^1.17.0",
         "postcss-simple-vars": "^7",
