Removing unnecessary rewrites config fom vercel.json

--- a/apps/dave/vercel.json
+++ b/apps/dave/vercel.json
@@ -1,10 +1,4 @@
 {
     "$schema": "https://openapi.vercel.sh/vercel.json",
-    "framework": "nextjs",
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/index.html"
-        }
-    ]
+    "framework": "nextjs"
 }
